trying to fix button text color visibility when hovering

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -82,6 +82,7 @@ a:active {
   font-family: inherit;
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
   background-color: var(--primary-color);
+  color: black;
   text-decoration: none;
   /*adds spacing to the button (this will be discussed more in-depth later) */
   padding: 10px;
